Fix flat storeys question on IE

--- a/angular/src/app/questionnaire/questions/flat-storeys-question/flat-storeys-question.component.scss
+++ b/angular/src/app/questionnaire/questions/flat-storeys-question/flat-storeys-question.component.scss
@@ -5,7 +5,6 @@
   align-items: center;
 
   .storeys-input {
-    flex: 1 1 50%;
     display: flex;
     flex-direction: column;
 
